test/functions/vass/return-type-function-failure.good
return-type-function-failure.chpl:4: In function 'valfun':
return-type-function-failure.chpl:5: error: cannot initialize return value of type 'proc(): int' from '1'
