test/functions/vass/return-type-function-failure.chpl
def afun() {
  return 1;
}
def valfun(): afun {
  return 1;
}
writeln(valfun());
